working on gallery and structure, and fixed quotes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- CSS file not working properly with HTML file -->
 
-    <link rel=“stylesheet” type="text/css" href=“./styles.css”>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 
     <title>Data Privacy</title>
 
@@ -16,9 +16,19 @@
 <body>
     
     <h1>
-        Data Privacy:
+        Data Privacy: Who's Watching You?
     </h1>
 
+    <p>
+        By: Hyab Isayas, Victoria Ogunmakinwa, Amvina Pham, and Hui Hu
+    </p>
+
+    <div class="breif-intro">
+        <p>
+          (example to hook the reader)(define data privacy)(why its important to be aware)(what were talking ab in the article)  
+        </p>
+        <!-- working on design of website structure/ adding image gallery  -->
+    </div>
     
 
 
