convert to unordered list

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
                 <!-- Explain why data privacy is important -->
                 <h2>Why You Should Be Aware</h2>
                 Being aware empowers you to: 
-                <ol>
+                <ul>
                     <li>Make informed decisions about sharing your data </li>
                     <li>Demand stronger privacy protections </li>
-                    <li>Recognize and avoid digital risks Many people don't realize how
-                much data is collected or how it can be used.</li>
-                </ol>
+                    <li>Recognize and avoid digital risks </li>
+                </ul>
+                Many people don't realize how
+                much data is collected or how it can be used.
             </p>
             <p>
                 <!-- [list of] article about data privacy  -->
