add Abdeali Savai

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Data Privacy: Who's Watching You?</h1>
         <h2>Stay informed. Protect your privacy. Safeguard your future.</h2>
 
-        <p>By: Hyab Isayas, Victoria Ogunmakinwa, Amvina Pham, and Hui Hu</p>
+        <p>By: Hyab Isayas, Victoria Ogunmakinwa, Amvina Pham, Hui Hu, and Abdeali Savai</p>
 
         <div class="breif-intro">
             <!-- One more image -->
