linked js file with html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <!-- CSS file not working properly with HTML file -->
-
         <link rel="stylesheet" type="text/css" href="./styles.css" />
 
         <title>Data Privacy</title>
@@ -20,8 +17,7 @@
             <!-- One more image -->
             <img src="./warning.jpg" alt="Warning Pop-up" />
             <p>
-                (example to hook the reader)(define data privacy)(why its
-                important to be aware)(what were talking ab in the article)
+                Have you ever encountered an alert like the picture above? If so, you could be at risk of breaches in you data privacy.  
             </p>
             <p>
                 <!-- Define data privacy-->
@@ -42,10 +38,18 @@
                 much data is collected or how it can be used.
             </p>
             <p>
-                <!-- [list of] article about data privacy  -->
+                <h2> Articles About Data Privacy</h2>
+                <ul><a href= "https://cloudian.com/guides/data-protection/data-protection-and-privacy-7-ways-to-protect-user-data/#protection-technologies" > What is Data Protection and Privacy?</a></ul>
+                <ul><a href= "https://www.titanfile.com/blog/5-methods-of-protecting-data/#:~:text=Encryption,decode%20and%20view%20the%20information."> Top 5 Methods of Protecting Data> </a></ul>
+                <ul><a href= "https://www.integrate.io/blog/what-is-data-privacy-why-is-it-important/"> What is Data Privacy—and Why Is It Important?</a></ul>
+                <ul><a href= "https://hai.stanford.edu/news/privacy-ai-era-how-do-we-protect-our-personal-information">Privacy in an AI Era: How Do We Protect Our Personal Information?</a></ul>
+                <ul><a href= "https://www.geeksforgeeks.org/techtips/what-is-digital-privacy-online-safety/"> What is Digital Privacy & Online Safety?</a></ul>
             </p>
 
             <!-- working on design of website structure/ adding image gallery  -->
         </div>
+        <script src= "dataprivacy.js" >
+            
+        </script>
     </body>
 </html>
