--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
             <!-- working on design of website structure/ adding image gallery  -->
         </div>
+
+        <button id= "darkmodebutton" type ="button">Dark Mode</button>
         <script src= "dataprivacy.js" >
             
         </script>
